// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Materia Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Materia Converter oboToSlate converts an OboNode to a Slate node with media defaults 1`] = `
Object {
  "children": Array [
    Object {
      "text": "Widget Caption",
    },
  ],
  "content": Object {
    "height": 600,
    "icon": "https://github.com/ucfopen/adventure-materia-widget/raw/master/src/_icons/icon-92.png",
    "src": "https://materia.ucf.edu/mock-widget",
    "textGroup": Array [
      Object {
        "text": Object {
          "value": "Widget Caption",
        },
      },
    ],
    "widgetEngine": "Adventure",
    "width": 800,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Materia Converter oboToSlate converts an OboNode to a Slate node with webpage defaults 1`] = `
Object {
  "children": Array [
    Object {
      "text": "Widget Caption",
    },
  ],
  "content": Object {
    "height": 600,
    "icon": "https://github.com/ucfopen/adventure-materia-widget/raw/master/src/_icons/icon-92.png",
    "src": "https://materia.ucf.edu/mock-widget",
    "textGroup": Array [
      Object {
        "text": Object {
          "value": "Widget Caption",
        },
      },
    ],
    "widgetEngine": "Adventure",
    "width": 800,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Materia Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "height": 600,
    "icon": "https://github.com/ucfopen/adventure-materia-widget/raw/master/src/_icons/icon-92.png",
    "src": "https://materia.ucf.edu/mock-widget",
    "textGroup": Array [
      Object {
        "data": null,
        "text": Object {
          "styleList": null,
          "value": "Widget Caption",
        },
      },
    ],
    "widgetEngine": "Adventure",
    "width": 800,
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
